--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: AI+X:Deep Learning
+subtitle: 한양대학교 2019년 2학기 AI+X:Deep Learning
 use-site-title: true
 ---
 
